--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node" : ">=16.0.0"
+  },
   "scripts": {
-    "server": "tsc --project './tsconfig.json' --watch & NODE_ENV=development nodemon dist",
+    "start": "tsc --project './tsconfig.json' --watch & NODE_ENV=development nodemon dist",
     "build": "nodemon -e '*' --watch client -x \"vite build\"",
     "client": "vite"
   },
